[package]
name = "davelib"
version = "0.1.0"
authors=["Dave bigmanrunning@gmail.com"]
description="A minimal Rust/React/Wasm Tutorial"
repository="https://github.com/tardisgallifrey"
license="MIT"
edition = "2021"

# More tags: https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.78"